# freechat

./: .editorconfig  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  makefile  pom.xml  renovate.json
freechat-sdk/python/: .gitlab-ci.yml  .travis.yml  README.md  publish.sh  pyproject.toml  setup.py  setup.sh  tox.ini
freechat-sdk/python/docs/: AIManagerForBizAdminApi.md  AIServiceApi.md  AccountApi.md  AccountManagerForAdminApi.md  AgentApi.md  AgentCreateDTO.md  AgentDetailsDTO.md  AgentItemForNameDTO.md  AgentQueryDTO.md  AgentQueryWhere.md  AgentSummaryDTO.md  AgentSummaryStatsDTO.md  AgentUpdateDTO.md  AiApiKeyCreateDTO.md  AiApiKeyInfoDTO.md  AiModelInfoDTO.md  AiModelInfoUpdateDTO.md  ApiTokenInfoDTO.md  AppConfigCreateDTO.md  AppConfigForAdminApi.md  AppConfigInfoDTO.md  AppMetaDTO.md  AppMetaForAdminApi.md  CharacterApi.md  CharacterBackendDTO.md  CharacterBackendDetailsDTO.md  CharacterCreateDTO.md  CharacterDetailsDTO.md  CharacterInfoDraftDTO.md  CharacterItemForNameDTO.md  CharacterQueryDTO.md  CharacterQueryWhere.md  CharacterSummaryDTO.md  CharacterSummaryStatsDTO.md  CharacterUpdateDTO.md  ChatApi.md  ChatContentDTO.md  ChatContextDTO.md  ChatCreateDTO.md  ChatMessageDTO.md  (+60 more)
freechat-sdk/python/freechat-sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
freechat-sdk/python/freechat_sdk/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
freechat-sdk/python/test/: test_account_api.py  test_account_manager_for_admin_api.py  test_agent_api.py  test_agent_create_dto.py  test_agent_details_dto.py  (+95 more)
(+2749 files in other folders)
